<resources>
    <string name="app_name">Justicia</string>
    <string name="title_home">Home</string>
    <string name="movie_title">Movie</string>
    <string name="tv_show_title">TV Show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_10_movies">Top Movies</string>
    <string name="tvposterDummy">deskripsi</string>
    <string name="showTitleDummy">Judul</string>
    <string name="showDurasiDummy">release</string>
    <string name="showDeskripsiDummy">deskripsi</string>
    <string name="top_10_tv_show">Top Tv Show</string>
    <string name="bgmovie">bgmovie</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="deskripsi">deskripsi</string>
    <string name="title">Title</string>
    <string name="release_date">release Date</string>
    <string name="durasi">Release :</string>
    <string name="durasicontent">release</string>
    <string name="cast">Rating :</string>
    <string name="castData">Rating</string>
    <string name="sinopsis">Overview :</string>
    <string name="sinopisData">overview</string>
    <string name="settings2">Settings</string>
    <string name="favorites">Feed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dialog_title">Do you want to remove this from favorite ?</string>
    <string name="movietab">Movies</string>
    <string name="tvshowtab">Tv Shows</string>
    <string name="add_to_favorite">ADD TO FAVORITE</string>
    <string name="added_to_favorite"> Added to Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="search">Search</string>
    <string name="searchmovie">Search Movie...</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_message">Muvi App is missing you so bad.</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string-array name="masalah">

    </string-array>


</resources>
