<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".views.Activity.DetailMovie">

    <ImageView
        android:id="@+id/detail_poster"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/deskripsi"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/detail_poster"
        android:text="@string/title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="8pt"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_poster"
        app:layout_constraintTop_toTopOf="@+id/detail_poster" />

    <TextView
        android:id="@+id/detail_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/detail_poster"
        android:text="@string/durasi"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/detail_title" />

    <TextView
        android:id="@+id/detail_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_duration_label"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/detail_poster"
        android:text="@string/durasicontent"
        app:layout_constraintStart_toEndOf="@+id/detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/detail_duration_label" />

    <TextView
        android:id="@+id/detail_cast_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_duration"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/detail_poster"
        android:text="@string/cast"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/detail_duration"
        app:layout_constraintTop_toBottomOf="@+id/detail_duration" />

    <TextView
        android:id="@+id/detail_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_cast_label"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/detail_poster"
        android:text="@string/castData"
        app:layout_constraintStart_toEndOf="@+id/detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/detail_cast_label" />

    <TextView
        android:id="@+id/detail_sinopsis_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_poster"
        android:layout_marginTop="8dp"
        android:text="@string/sinopsis"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/detail_poster" />

    <TextView
        android:id="@+id/detail_sinopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_sinopsis_label"
        android:layout_marginTop="8dp"
        android:text="@string/sinopisData"
        app:layout_constraintStart_toStartOf="@+id/detail_sinopsis_label"
        app:layout_constraintTop_toBottomOf="@+id/detail_sinopsis_label" />

    <Button
        android:id="@+id/btn_add_fav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp"
        android:background="@color/colorAccent"
        android:text="@string/add_to_favorite"/>

</android.support.constraint.ConstraintLayout>